# Curium-Language

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ROADMAP.md  curium.tmLanguage.json  curium_config.json  curium_out.c  curium_out.cpp  debug.cm  export_cookies.py  git-bash.sh  install.ps1  install.sh  main.c  main.cm  server.c  stress_test.py  test_closure.cm  test_dyn.cm  test_gen.cm  test_trait.cm  typecheck_errors.txt  v5-MIGRATION.md
.cache/clangd/index/: arena.c.2B3308F3D208A602.idx  arena.h.47E050ED9B2B3C40.idx  array.c.0A2CF4DD9D5F110B.idx  array.c.DE0498A4438CF5BA.idx  array.h.68EE07A3E84153DA.idx  array.h.CD08607FB46791CD.idx  ast.c.21ACFD23B8DD9EC8.idx  ast.h.FA521098DFA35FA9.idx  ast_v2.c.1B0E2E51B912587E.idx  ast_v2.h.0527CFDEFE7A63C5.idx  ast_v2.h.2029CFA145096C83.idx  backend.c.873633E13372CB0C.idx  backend.h.344160BB626D4FAA.idx  backend.h.3E4CE20110760E35.idx  cm_cli.c.5C6449ACD2FD3E1B.idx  cm_codegen.c.F0F8A77C4E2F3198.idx  cm_codegen.h.2F66E54AA71B0C7B.idx  cm_compiler_test.c.051C0BAF87302BF8.idx  cm_highlight.c.6724282AD02F5A62.idx  cm_highlight.h.AAC795F77B0D1A1D.idx  cm_safety.c.287443D56B210245.idx  cm_safety.h.C45A2F5F45FF697D.idx  cmd.c.0AE2F58174E65823.idx  cmd.c.7F2F6F7BD2542712.idx  cmd.h.02B214705769DA5F.idx  cmd.h.6EB6DE3A65F97793.idx  codegen_v2.c.0E910864BCF515EB.idx  core.c.EEB751280C82933F.idx  core.c.FA94AD6AF95CD9E5.idx  core.h.D632878E8C236411.idx  core.h.F4BE59D3B7BB187D.idx  cur_cli.c.AF4516B81D51D961.idx  curium_cli.c.5D23D98DE2704CDC.idx  curium_codegen.c.2B51468A9A381192.idx  curium_codegen.h.4984D6BD0A268AF0.idx  curium_compiler_test.c.10D02787691FC206.idx  curium_highlight.c.C61C6304686B7B09.idx  curium_highlight.h.0DB2AD3216EC4538.idx  curium_lang.h.180AA1319A59848C.idx  curium_safety.c.3B2826E1FC0D85AF.idx  (+81 more)
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md  INSTALLATION.md  INTERNALS.md  INTRODUCTION.md  LANGUAGE_GUIDE.md  PROJECT_GUIDE.md  SYNTAX_REFERENCE.md
examples/calculator_spa/: README.md
examples/calculator_spa/src/: main.cm
include/cm/: array.h  cmd.h  core.h  error.h  file.h  http.h  json.h  map.h  memory.h  string.h  thread.h
include/curium/: array.h  backend.h  cmd.h  core.h  curium_highlight.h  curium_lang.h  curium_safety.h  debug.h  dynarray.h  error.h  error_detail.h  error_obj.h  file.h  http.h  json.h  list.h  map.h  memory.h  oop.h  option.h  packages.h  project.h  result.h  safe_ptr.h  string.h  thread.h
include/curium/compiler/: arena.h  ast.h  ast_v2.h  lexer.h  parser.h  tokens.h  typecheck.h
original_CM/: CM.c  CM.h
public_html/: index.html  script.js  style.css
src/: array.c  cmd.c  core.c  cur_cli.c  curium_cli.c  curium_codegen.c  curium_codegen.h  curium_highlight.c  curium_lang.c  error.c  file.c  http.c  json.c  map.c  memory.c  string.c  thread.c  variation_a.cm
src/compiler/: arena.c  typecheck.c
src/compiler/ast/: ast.c  ast_v2.c
src/compiler/codegen/: codegen_v2.c
src/compiler/lexer/: lexer.c  lexer_v2.c
src/compiler/parser/: parser.c  parser_v2.c
src/compiler/safety/: curium_safety.c
src/compiler/tokens/: tokens.c
src/runtime/: array.c  backend.c  cmd.c  core.c  debug.c  dynarray.c  error.c  error_detail.c  error_obj.c  file.c  http.c  json.c  list.c  map.c  memory.c  oop.c  option.c  packages.c  project.c  result.c  safe_ptr.c  string.c  thread.c
std/: array.cm  arrays.cm  atomic.cm  crypto.cm  datetime.cm  dyn.cm  fmt.cm  fs.cm  https.cm  io.cm  json.cm  math.cm  os.cm  random.cm  re.cm  string_utils.cm  sync.cm  sys.cm
test-pharmacy/: README.md  curium.json
tests/: 10_c_block.cm  11_linked_list_ptr.cm  12_linked_list_dyn.cm  13_while_loop.cm  14_for_loop.cm  15_restrictions.cm  16_array_1d.cm  17_array_2d.cm  19_audit_fixes.cm  1_hello.cm  20_hot_attr.cm  2_madlibs.cm  3_calc.cm  4_calc_dyn.cm  5_logical.cm  6_bitwise.cm  7_pointer.cm  8_linked_list.cm  9_file_writer.cm  curium_compiler_test.c  direct_self.cm  feature_test.cm  indirect_a.cm  indirect_b.cm  lib.cm  main.cm  main_test.c  main_test.cm  math.cm  spawn_test.cm  std_smoke.cm  stress_test.cm  test_cpp_block.cm  test_error.cm  test_escape.cm  test_https.c  test_utf8.c  test_v4_reactor.cm  test_v4_sized_types.cm  variation_a.cm
tests/fixtures/: hello.cm  hello_out.c  json_parser.cm  test_native.cm
vscode-extension/cm-language/: [Content_Types].xml  curium-language-6.0.0.vsix  package.json
vscode-extension/cm-language/syntaxes/: curium.tmLanguage.json
